plugins {
    id 'java'
    id 'jacoco'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
}

jacoco {
    toolVersion = "0.8.6"
    reportsDir = file("$buildDir/jacocoReports")
}

jacocoTestReport {
    dependsOn test
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.9
            }
        }
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

check.dependsOn(jacocoTestCoverageVerification)
